--- a/.github/workflows/Simple.yml
+++ b/.github/workflows/Simple.yml
@@ -10,5 +10,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Cypress run
         uses: cypress-io/github-action@v5 # will run npm install
-        with:
-          start: npm start # will run npx cypress run
+      - run: npx cypress run 
